styled and realigned buttons, fixed form

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -27,6 +27,8 @@
   grid-area: show-box-2;
   padding: 10px;
   border: 1px solid;
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px, #AEDADD;
 }
 
 .show-box-3 {
